# vr180-ai-pipeline

./: .clinerules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLINE_TASK_BOARD.md  Dockerfile  LICENSE  OVERNIGHT_RD_REPORT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
db/: __init__.py  engine.py  models.py
docs/: COMPETITOR_AND_BUSINESS.md  DEPTHCRAFTER_SETUP.md  DEV_GUIDE.md  OUTPAINT_SETUP.md  PLAN_OUTPUT_FORMATS_AND_PROMPT.md  PRD-v2-vr180-studio.md  PROMPT_GUIDE_VR180.md  ROADMAP.md  SEEDVR2_SETUP.md  SOLUTION_ARCHITECTURE.md  STEREOCRAFTER_SETUP.md  STRATEGY_AI_VR180.md  VIDEOGEN_SETUP.md  architecture.md  depth-estimation.md  end-to-end-workflow.md  equirectangular-projection.md  pipeline-overview.md  product-experience-design.md  prompt-design-guide.md  session-summary-and-dev-guide.md  stereo-disparity.md  vr-metadata-embedding.md
docs/archive/: OVERNIGHT_RD_REPORT.md
integrations/: __init__.py  base.py  factory.py  kling.py  seedance.py  veo.py
notifications/: __init__.py  feishu.py
pipeline/: __init__.py  depth_crafter.py  depth_estimator.py  device_utils.py  equirectangular_mapper.py  fulldome_mapper.py  outpainter.py  prompt_builder.py  spatial_converter.py  spherical_injector.py  stereo_crafter.py  stereo_renderer.py  streaming_pipeline.py  upscaler.py  video_upscaler.py  vr_metadata.py
pipeline/research/: __init__.py  ai_outpainter.py  benchmark_upscale.py  orientation_matrix.py  temporal_outpainter.py  test_inversion_matrix.py
scripts/: create_api_key.py  download_models.py  generate.py  prompt_lab.py  run_pipeline.py  setup_seedvr2.py  watch_and_notify.py
tests/: __init__.py  conftest.py  test_auth.py  test_celery_tasks.py  test_database.py  test_depth_crafter.py  test_fulldome_mapper.py  test_integrations.py  test_orientation_matrix.py  test_outpainter.py  test_phase1_optimizations.py  test_phase4.py  test_pipeline.py  test_prompt_builder.py  test_prompt_lab.py  test_sbs_detection.py  test_spatial_converter.py  test_spherical_injector.py  test_stereo_crafter.py  test_temporal_outpainter.py  test_video_upscaler.py  test_vr_metadata.py  test_web_api.py
video/: PROMPT_TEST_PLAN.md  prompt_lab_manifest.json
video/googlegemini_v2_temp/: checkpoint.json
web/: __init__.py  app.py  auth.py  quota.py  quota_db.py  schemas.py  storage.py  task_store.py  task_store_db.py
web/static/: app.js  index.html  styles.css
workers/: __init__.py  celery_app.py  convert_tasks.py  upscale_tasks.py
